# lstm-autoencoder

./: .copier-answers.yml  .env  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: Example Plotting.ipynb  Pipeline_Run.ipynb
scripts/: check_pyenv_python_version_availability.sh  info_prompts.py  install_global_dependencies.sh
src/lstm_autoencoder/: __init__.py  main.py
src/lstm_autoencoder/conf/: main.yaml
src/lstm_autoencoder/data/: ecg_simulation.py  feature_engineering.py  make_dataset.py  preprocessing.py  simulation.py  windowed_dataset.py
src/lstm_autoencoder/features/: build_features.py
src/lstm_autoencoder/models/: autoencoder.py
tests/: test_run.py
